 information (reported by Chris Resnik).
-Bug fix involving notes with multiple lines with exporting cards.
-Fix bug with picture sometimes not showing when first starting the program.
-Better support for non-latin characters in sound files under Windows (reported
 by Raoul Pontecaille).
-Fix crash in 'Compact database' involving too many open files (reported by
 Pawel Szerszon).
-Changing card types and deleting cards from the card browser is now faster.
-No longer convert filenames to lower case on Windows (requested by Michael
 Campbell).
-Fix another crash involving duplicates while converting cards (reported by
 Gnome).
-Fix displaying non-latin characters in statistics (reported by Pawel Szerszon).
-Don't erase fields when cancelling a card type conversion (reported by Gnome).
-Don't allow cancelling the import metadata information dialog.
-Fix harmless error message when converting to Cloze cards in the card browser
 (reported by Michael Campbell).
-Upgraded to latest version of Qt/PyQt.


Mnemosyne 2.1 : 2012-09-10

-New import/export format to share cards, which also bundles the media files.
 Supports importing an updated version of the same exported cards, so that
 authors can release updated versions of their cards fixing e.g. spelling
 mistakes.
-Implemented txt export with tab-separated values.
-You can now specify more than 1 tag to add during import
 (requested by Barbara).
-In 'edit cards', no longer warn about discarding changes if you did not make
 any.
-Don't crash card browser when searching for \ (reported by Faemorleto).
-Fix bug where active tags would sometimes not have a checkbox in the card
 browser (reported by Gnome).
-Fixed issues involving tag renaming and syncing (reported by Barbara).
-Made RTL handling for Arabic and Hebrew more robust.
-audio tags now support start and stop arguments, e.g. <audio ...
 start="1" stop="2"> will play the sound file from 1 to 2 seconds.